semantics/oracle/tests/snapshots/better_api_semantics__oracle__tests__typ__lower_headers_reference_response.snap
---
source: semantics/oracle/tests/typ.rs
expression: oracle.reports()
---
[
    Report {
        severity: Error,
        title: "invalid headers type",
        labels: [
            Label {
                style: Primary,
                message: "expected record, got response",
                span: Span {
                    start: 86,
                    end: 91,
                },
            },
        ],
        note: Some(
            "help: headers must be a simple record",
        ),
    },
]
